--- a/src/html/products-list/_product-list-8items.htm
+++ b/src/html/products-list/_product-list-8items.htm
@@ -58,7 +58,7 @@
 						<tbody>
 							<tr>
 								<td>Обивка:</td>
-								<td>рогожка</td>
+								<td><span class="_bdb-yellow">рогожка</span></td>
 							</tr>
 							<tr>
 								<td>Наполнитель:</td>
@@ -180,7 +180,7 @@
 							</tr>
 							<tr>
 								<td>Наполнитель:</td>
-								<td>ДВП, ППУ, поролоновая крошка</td>
+								<td><a href="" class="_bdb-yellow">ДВП, ППУ, поролоновая крошка</a></td>
 							</tr>
 							<tr>
 								<td>Пружинный блок:</td>
@@ -307,7 +307,7 @@
 							</tr>
 							<tr>
 								<td>Пружинный блок:</td>
-								<td>нет</td>
+								<td><span class="_bdb-yellow">нет</span></td>
 							</tr>
 							<tr>
 								<td>Обивка:</td>
