--- a/src/warranty.html
+++ b/src/warranty.html
@@ -79,7 +79,7 @@
 						</div>
 					</div>
 					<div class="warranty__shop">
-						<div class="warranty__shop-title"></div>
+						<div class="warranty__shop-title">Гарантия в нашем магазине</div>
 						<div class="warranty__shop-list">
 							<div class="warranty__shop-item">
 								<div class="warranty__shop-item-content">
@@ -101,7 +101,7 @@
 									<div class="warranty__shop-count">
 										<span style="margin-right: 16px;"><img src="@img/content/warranty__shop-count-1.svg"></span>
 										<span style="margin-right: 24px;"><img src="@img/content/warranty__shop-count-4.svg"></span>
-										<span><img src="@img/content/warranty__shop-count-5.svg">.</span>
+										<span><img src="@img/content/warranty__shop-count-5.svg"></span>
 									</div>
 									<div class="warranty__shop-for">
 										На мягкую мебель
