--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
 				<li><a target="_blank" href="contacts.html">Контакты</a></li>
 				<li><a target="_blank" href="warranty.html">Гарантия и возврат</a></li>
 				<li><a target="_blank" href="about.html">О фабрике</a></li>
+				<li><a target="_blank" href="shops.html">Магазины Гудмебель</a></li>
 			</ol>
 			<h2>Попапы:</h2>
 			<ol class="rootpage__list">
