--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,8 @@
 				<li><a target="_blank" href="warranty.html">Гарантия и возврат</a></li>
 				<li><a target="_blank" href="about.html">О фабрике</a></li>
 				<li><a target="_blank" href="shops.html">Магазины Гудмебель</a></li>
+				<li><a target="_blank" href="blog.html">Блог</a></li>
+				<li><a target="_blank" href="blog-detail.html">Блог детально</a></li>
 			</ol>
 			<h2>Попапы:</h2>
 			<ol class="rootpage__list">
