--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -823,3 +823,7 @@
 		</div>
 	</div>
 </section>
+<section class="cookie">
+	<div class="cookie__text">Наш сайт использует cookie.</div>
+	<button class="cookie__btn btn _yellow">Прекрасно</button>
+</section>
