--- a/src/thanks-day.html
+++ b/src/thanks-day.html
@@ -20,19 +20,21 @@
 					<div class="content-section__h1 _border-bottom">Спасибо, ваш заказ принят!</div>
 				</section>
 				<section class="thanks __container">
-					<div class="thanks__content">
-						<p>В течение 30 минут с вами свяжется менеджер магазина для подтверждения заказа Звонок будет с номера: +7 495 1231212</p>
-						<p class="_fw-300">
-							Ваш номер телефона указанный в заявке: <span class="_fw-400">+7 905 588-50-00</span>
-							<a href="#" class="thanks__change">
-								<img src="@img/icons/change-icon.svg" alt="change">
-								изменить
-							</a>
-						</p>
-						<a href="" class="thanks__btn btn _yellow">На главную страницу</a>
-					</div>
-					<div class="thanks__image">
-						<img src="@img/content/thanks-img.svg" alt="thanks">
+					<div class="thanks__container __container">
+						<div class="thanks__content">
+							<p>В течение 30 минут с вами свяжется менеджер магазина для подтверждения заказа Звонок будет с номера: +7 495 1231212</p>
+							<p class="_fw-300">
+								Ваш номер телефона указанный в заявке: <span class="_fw-400">+7 905 588-50-00</span>
+								<a href="#" class="thanks__change">
+									<img src="@img/icons/change-icon.svg" alt="change">
+									изменить
+								</a>
+							</p>
+							<a href="" class="thanks__btn btn _yellow">На главную страницу</a>
+						</div>
+						<div class="thanks__image">
+							<img src="@img/content/thanks-img.svg" alt="thanks">
+						</div>
 					</div>
 				</section>
 			</main>
