--- a/src/html/_categories-grid.htm
+++ b/src/html/_categories-grid.htm
@@ -19,9 +19,8 @@
 					<div class="categories-grid__image _image-1">
 						<img src="@img/content/categories-1.png" alt="categories" class="swiper-lazy">
 					</div>
-					<svg class="categories-grid__icon _icon-1">
-						<use xlink:href="@img/icons/icons.svg#svg-categories-1-icon"></use>
-					</svg>
+					<img src="@img/icons/categories-1-icon.svg" class="categories-grid__icon _icon-1">
+					<img src="@img/icons/categories-1-icon-hovered.svg" class="categories-grid__icon _icon-1 _hovered">
 				</div>
 				<div class="categories-grid__item _col-3 categories__slide swiper-slide">
 					<div class="categories-grid__content">
@@ -39,9 +38,8 @@
 					<div class="categories-grid__image _image-2">
 						<img src="@img/content/categories-2.png" alt="categories-2" class="swiper-lazy">
 					</div>
-					<svg class="categories-grid__icon _icon-2">
-						<use xlink:href="@img/icons/icons.svg#svg-categories-2-icon"></use>
-					</svg>
+					<img src="@img/icons/categories-2-icon.svg" class="categories-grid__icon _icon-2">
+					<img src="@img/icons/categories-2-icon-hovered.svg" class="categories-grid__icon _icon-2 _hovered">
 				</div>
 				<div class="categories-grid__item _col-3 categories__slide swiper-slide">
 					<div class="categories-grid__content">
@@ -60,9 +58,8 @@
 					<div class="categories-grid__image _image-3">
 						<img src="@img/content/categories-3.png" alt="categories-3" class="swiper-lazy">
 					</div>
-					<svg class="categories-grid__icon _icon-3">
-						<use xlink:href="@img/icons/icons.svg#svg-categories-3-icon"></use>
-					</svg>
+					<img src="@img/icons/categories-3-icon.svg" class="categories-grid__icon _icon-3">
+					<img src="@img/icons/categories-3-icon-hovered.svg" class="categories-grid__icon _icon-3 _hovered">
 				</div>
 				<div class="categories-grid__item _col-4 categories__slide swiper-slide">
 					<div class="categories-grid__content">
@@ -80,9 +77,8 @@
 					<div class="categories-grid__image _image-4">
 						<img src="@img/content/categories-4.png" alt="categories-4" class="swiper-lazy">
 					</div>
-					<svg class="categories-grid__icon _icon-4">
-						<use xlink:href="@img/icons/icons.svg#svg-categories-4-icon"></use>
-					</svg>
+					<img src="@img/icons/categories-4-icon.svg" class="categories-grid__icon _icon-4">
+					<img src="@img/icons/categories-4-icon-hovered.svg" class="categories-grid__icon _icon-4 _hovered">
 				</div>
 				<div class="categories-grid__item _col-4 categories__slide swiper-slide">
 					<div class="categories-grid__content">
@@ -100,9 +96,8 @@
 					<div class="categories-grid__image _image-5">
 						<img src="@img/content/categories-5.png" alt="categories-5" class="swiper-lazy">
 					</div>
-					<svg class="categories-grid__icon _icon-5">
-						<use xlink:href="@img/icons/icons.svg#svg-categories-5-icon"></use>
-					</svg>
+					<img src="@img/icons/categories-5-icon.svg" class="categories-grid__icon _icon-5">
+					<img src="@img/icons/categories-5-icon-hovered.svg" class="categories-grid__icon _icon-5 _hovered">
 				</div>
 				<div class="categories-grid__item _col-4 categories__slide swiper-slide">
 					<div class="categories-grid__content">
@@ -120,9 +115,8 @@
 					<div class="categories-grid__image  _image-6">
 						<img src="@img/content/categories-6.png" alt="categories-6" class="swiper-lazy">
 					</div>
-					<svg class="categories-grid__icon _icon-6">
-						<use xlink:href="@img/icons/icons.svg#svg-categories-6-icon"></use>
-					</svg>
+					<img src="@img/icons/categories-6-icon.svg" class="categories-grid__icon _icon-6">
+					<img src="@img/icons/categories-6-icon-hovered.svg" class="categories-grid__icon _icon-6 _hovered">
 				</div>
 				<div class="categories-grid__item _col-4 categories__slide swiper-slide">
 					<div class="categories-grid__content">
@@ -140,9 +134,8 @@
 					<div class="categories-grid__image  _image-7">
 						<img src="@img/content/categories-7.png" alt="categories-7" class="swiper-lazy">
 					</div>
-					<svg class="categories-grid__icon _icon-7" width="52" height="104">
-						<use xlink:href="@img/icons/icons.svg#svg-categories-7-icon"></use>
-					</svg>
+					<img src="@img/icons/categories-7-icon.svg" class="categories-grid__icon _icon-7">
+					<img src="@img/icons/categories-7-icon-hovered.svg" class="categories-grid__icon _icon-7 _hovered">
 				</div>
 			</div>
 		</div>
