--- a/src/order-3.html
+++ b/src/order-3.html
@@ -102,7 +102,7 @@
 			@@include('html/_footer.htm',{})
 			@@include('html/_popup.htm',{})
 			@@include('html/_catalog.htm',{})
-		</div>
+		</section>
 		@@include('html/_js.htm',{})
 	</body>
 </html>
