--- a/src/thanks-day.html
+++ b/src/thanks-day.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-	@@include('html/_head.htm',{
-	"title":"Способы доставки"
-	})
+	@@include('html/_head.htm',{ "title":"Спасибо, ваш заказ принят! ДЕНЬ" })
 	<body>
 		<div class="pre-loader">
 			<div class="loader">
-				<img src="@img/icons/main-logo.svg" alt="">
+				<img src="@img/icons/main-logo.svg" alt="" />
 			</div>
 		</div>
 		<section class="wrapper">
@@ -17,31 +15,142 @@
 					<span>Способы доставки</span>
 				</section>
 				<section class="__container">
-					<div class="content-section__h1 _border-bottom">Спасибо, ваш заказ принят!</div>
+					<div class="content-section__h1 _border-bottom">
+						Спасибо, ваш заказ принят!
+					</div>
 				</section>
-				<section class="thanks __container">
-					<div class="thanks__container __container">
-						<div class="thanks__content">
-							<p>В течение 30 минут с вами свяжется менеджер магазина для подтверждения заказа Звонок будет с номера: +7 495 1231212</p>
-							<p class="_fw-300">
-								Ваш номер телефона указанный в заявке: <span class="_fw-400">+7 905 588-50-00</span>
-								<a href="#" class="thanks__change">
-									<img src="@img/icons/change-icon.svg" alt="change">
-									изменить
-								</a>
-							</p>
-							<a href="" class="thanks__btn btn _yellow">На главную страницу</a>
+				<section class="thanks">
+					<div class="thanks__inner __container">
+						<div class="thanks__content-outer">
+							<div class="thanks__content">
+								<p>
+									В течение 30 минут с вами свяжется менеджер магазина для
+									подтверждения заказа Звонок будет с номера: +7 495 1231212
+								</p>
+								<p class="_fw-300">
+									Ваш номер телефона указанный в заявке:
+									<span class="_fw-400">+7 905 588-50-00</span>
+									<a href="#" class="thanks__change">
+										<img src="@img/icons/change-icon.svg" alt="change" />
+										изменить
+									</a>
+								</p>
+								<a href="" class="thanks__btn btn _yellow">На главную страницу</a>
+							</div>
+							<div class="thanks__image">
+								<img src="@img/content/thanks-img.svg" alt="thanks" />
+							</div>
+							<section class="basket">
+								<div class="basket__body">
+									<div class="basket__list">
+										<div class="basket__product">
+											<div class="basket__product-image"><img src="@img/content/basket__product-image-1.png" alt="basket__product-image-1"></div>
+											<div class="basket__product-body">
+												<div class="basket__product-title">Диван прямой Вита Дизайн 4</div>
+												<div class="basket__product-line">Цвет: <span class="basket__product-color" style="background-color: #d49b25;"></span> <span class="_color-black">Название цвета</span></div>
+												<div class="basket__product-line">Подъемный механизм: <span class="_color-black">Да</span></div>
+												<div class="basket__product-line">Размер спального места: <span class="_color-black">140x200</span></div>
+											</div>
+											<div class="basket__product-footer">
+												<div class="basket__product-count">
+													<div data-quantity="" class="quantity">
+														<button data-quantity-minus="" type="button" class="quantity__button quantity__button_minus"></button>
+														<div class="quantity__input">
+															<input data-quantity-value="" autocomplete="off" type="text" name="form[]" value="1">
+														</div>
+														<button data-quantity-plus="" type="button" class="quantity__button quantity__button_plus"></button>
+													</div>
+												</div>
+												<div class="product__production-time _mt-10 _mb-10">
+													<svg class="product__production-svg _check"><use xlink:href="img/icons/icons.svg#svg-check"></use></svg>
+													В наличии, 2-4 дня
+												</div>
+												<div class="basket__product-price">
+													<div class="basket__product-price-inner">
+														<div class="basket__product-price-current">10 690 ₽</div>
+														<div class="basket__product-price-old">9 370 ₽</div>
+													</div>
+													<div class="product-detail__price-economy">
+														<img src="img/icons/economy-green.svg">
+														<span class="product-detail__economy-outer">
+														<span class="_only-desktop">Выгода 1799 руб</span>	(-4%)
+														</span>
+													</div>
+												</div>
+											</div>
+											<div class="basket__product-remove">
+												<button>
+													Удалить
+													<svg width="15" height="16"><use xlink:href="@img/icons/icons.svg#svg-remove"></use></svg>
+												</button>
+											</div>
+										</div>
+										<div class="basket__product" style="border-bottom: none;">
+											<div class="basket__product-image"><img src="@img/content/basket__product-image-2.png" alt="basket__product-image-2"></div>
+											<div class="basket__product-body">
+												<div class="basket__product-title">Диван угловой Мэдисон Люкс Плюш Браун</div>
+												<div class="basket__product-line">Цвет: <span class="basket__product-color" style="background-color: #d49b25;"></span> <span class="_color-black">Название цвета</span></div>
+												<div class="basket__product-line">Подъемный механизм: <span class="_color-black">Да</span></div>
+												<div class="basket__product-line">Размер спального места: <span class="_color-black">140x200</span></div>
+											</div>
+											<div class="basket__product-footer">
+												<div class="basket__product-count">
+													<div data-quantity="" class="quantity">
+														<button data-quantity-minus="" type="button" class="quantity__button quantity__button_minus"></button>
+														<div class="quantity__input">
+															<input data-quantity-value="" autocomplete="off" type="text" name="form[]" value="1">
+														</div>
+														<button data-quantity-plus="" type="button" class="quantity__button quantity__button_plus"></button>
+													</div>
+												</div>
+												<div class="product__production-time _mt-10 _mb-10">
+													<svg class="product__production-svg _check"><use xlink:href="img/icons/icons.svg#svg-check"></use></svg>
+													В наличии, 2-4 дня
+												</div>
+												<div class="basket__product-price">
+													<div class="basket__product-price-inner">
+														<div class="basket__product-price-current">10 690 ₽</div>
+													</div>
+												</div>
+											</div>
+											<div class="basket__product-remove">
+												<button>
+													Удалить
+													<svg width="15" height="16"><use xlink:href="@img/icons/icons.svg#svg-remove"></use></svg>
+												</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							</section>
 						</div>
-						<div class="thanks__image">
-							<img src="@img/content/thanks-img.svg" alt="thanks">
+						<div class="thanks__sidebar">
+							<div class="thanks__qr-code qr-code">
+								<div class="qr-code__title">QR код для оплаты</div>
+								<div class="qr-code__image">
+									<img src="@img/content/qr-code__image.png" alt="" />
+								</div>
+								<button class="btn _yellow qr-code__banking">
+									Оплатить в приложении банка
+								</button>
+								<div class="qr-code__disclaimer"
+									>Оплата счета означает согласие с условиями публичной оферты,
+									размещенной на интернет-сайте Продавца.</div
+								>
+							</div>
+							<div class="qr-code__payment">
+								<button class="btn _blue qr-code__pay">
+									<img src="@img/icons/banking-card.svg" />
+									Оплатить онлайн картой
+								</button>
+							</div>
 						</div>
 					</div>
 				</section>
 			</main>
-			@@include('html/_footer.htm',{})
-			@@include('html/_popup.htm',{})
+			@@include('html/_footer.htm',{}) @@include('html/_popup.htm',{})
 			@@include('html/_catalog.htm',{})
-		</div>
+		</section>
 		@@include('html/_js.htm',{})
 	</body>
 </html>
