--- a/src/basket.html
+++ b/src/basket.html
@@ -100,21 +100,6 @@
 								</div>
 							</div>
 						</div>
-						<!-- <section class="products-slider">
-							<div class="slider-head">
-								<div class="content-section__h2">Рекомендуем приобрести</div>
-								<div class="slider-head__navigation">
-									<button type="button" class="swiper-button-prev swiper-button-prev-slider-1"><svg width="12" height="7"><use xlink:href="@img/icons/icons.svg#svg-select-arrow"></use></svg></button>
-									<button type="button" class="swiper-button-next swiper-button-next-slider-1"><svg width="12" height="7"><use xlink:href="@img/icons/icons.svg#svg-select-arrow"></use></svg></button>
-								</div>
-							</div>
-							<div class="products-slider__slider-1 swiper">
-								<div class="products-slider__wrapper swiper-wrapper">
-									@@include('html/products-list/_product-list-slider-8.htm',{})
-								</div>
-								<div class="swiper-pagination pagination-slider-1"></div>
-							</div>
-						</section> -->
 						<section class="ordering" data-da=".basket,1180">
 							<div class="ordering__head">
 								<div class="ordering__title">Оформление заказа</div>
@@ -259,7 +244,7 @@
 			@@include('html/_footer.htm',{})
 			@@include('html/_popup.htm',{})
 			@@include('html/_catalog.htm',{})
-		</div>
+		</section>
 		@@include('html/_js.htm',{})
 	</body>
 </html>
