--- a/src/list.html
+++ b/src/list.html
@@ -9,7 +9,7 @@
 				<img src="@img/icons/main-logo.svg" alt="">
 			</div>
 		</div>
-		<div class="wrapper">
+		<section class="wrapper">
 			@@include('html/_header.htm',{})
 			<main class="page">
 				<section class="breadcrumbs __container">
@@ -188,7 +188,7 @@
 			@@include('html/_footer.htm',{})
 			@@include('html/_popup.htm',{})
 			@@include('html/_catalog.htm',{})
-		</div>
+		</section>
 		@@include('html/_js.htm',{})
 	</body>
 </html>
