--- a/src/order-1.html
+++ b/src/order-1.html
@@ -391,7 +391,7 @@
 			@@include('html/_footer.htm',{})
 			@@include('html/_popup.htm',{})
 			@@include('html/_catalog.htm',{})
-		</div>
+		</section>
 		@@include('html/_js.htm',{})
 	</body>
 </html>
