--- a/src/promotions-3.html
+++ b/src/promotions-3.html
@@ -48,7 +48,7 @@
 			@@include('html/_footer.htm',{})
 			@@include('html/_popup.htm',{})
 			@@include('html/_catalog.htm',{})
-		</div>
+		</section>
 		@@include('html/_js.htm',{})
 	</body>
 </html>
