--- a/src/reviews.html
+++ b/src/reviews.html
@@ -195,7 +195,7 @@
 			@@include('html/_footer.htm',{})
 			@@include('html/_popup.htm',{})
 			@@include('html/_catalog.htm',{})
-		</div>
+		</section>
 		@@include('html/_js.htm',{})
 	</body>
 </html>
