--- a/src/html/_tags.htm
+++ b/src/html/_tags.htm
@@ -1,4 +1,4 @@
-<section class="tags-buttons __container">
+<section class="tags-buttons">
 	<button class="btn tags-buttons__item">На ножках</button>
 	<button class="btn tags-buttons__item">Недорогие</button>
 	<button class="btn tags-buttons__item">Прямые диваны</button>
