--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		<div class="rootpage">
 			<h1>Верстка «NEW_PROJECT_NAME»</h1>
 			<div class="rootpage__info">
-				
+
 			</div>
 			<h2>Готовые страницы:</h2>
 			<ol class="rootpage__list">
@@ -40,6 +40,7 @@
 				<li><a target="_blank" href="delivery.html">Доставка</a></li>
 				<li><a target="_blank" href="thanks-day.html">Спасибо (день)</a></li>
 				<li><a target="_blank" href="thanks-night.html">Спасибо (ночь)</a></li>
+				<li><a target="_blank" href="lk.html">Разводная ЛК</a></li>
 			</ol>
 			<h2>Попапы:</h2>
 			<ol class="rootpage__list">
@@ -78,7 +79,7 @@
 			padding: 0px;
 			margin: 0px;
 			border: 0px;
-			box-sizing: border-box; 
+			box-sizing: border-box;
 		}
 		html, body {
 			height: 100%;
@@ -182,7 +183,7 @@
 		}
 		.rootpage__contacts{
 			background: #464ec0;
-			
+
 		}
 		.rootpage__contacts a{
 			color: #fff;
