--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,10 @@
 				<li><a target="_blank" href="thanks-day.html">Спасибо (день)</a></li>
 				<li><a target="_blank" href="thanks-night.html">Спасибо (ночь)</a></li>
 				<li><a target="_blank" href="lk.html">Разводная ЛК</a></li>
+				<li><a target="_blank" href="lk-bonus.html">Разводная ЛК - Бонусы</a></li>
+				<li><a target="_blank" href="lk-history.html">Разводная ЛК - История заказов</a></li>
+				<li><a target="_blank" href="lk-profile.html">Разводная ЛК - Профиль</a></li>
+				<li><a target="_blank" href="lk-zakaz.html">Разводная ЛК - Заказ</a></li>
 			</ol>
 			<h2>Попапы:</h2>
 			<ol class="rootpage__list">
